fix: add horizontal scroll to Markdown tables

--- a/src/components/Markdown/Markdown.module.scss
+++ b/src/components/Markdown/Markdown.module.scss
@@ -105,6 +105,9 @@
 
   table {
     width: 100%;
+    display: block;
+    overflow-x: scroll;
+    // white-space: nowrap;
 
     th,
     td {
